--- a/ansible/roles/ansible-git/defaults/main.yml
+++ b/ansible/roles/ansible-git/defaults/main.yml
@@ -1,7 +1,5 @@
 ---
-git_url: ''
-git_key: ''
-git_branch: 'master'
+git_branch: 'main'
 git_msg: 'update files with ansible'
 git_remove_local: false
 git_username: AmirKourdi
