--- a/ansible/roles/web_welcome_message/tasks/main.yml
+++ b/ansible/roles/web_welcome_message/tasks/main.yml
@@ -3,15 +3,16 @@
   become: yes
   template:
     src: templates/var/www/html/index.html.j2
-    dest: "/var/www/html/index.html.j2"
+    dest: "/var/www/html/index.html"
     owner: "root"
     group: "root"
-    mode: 0600
+    mode: 0755
   register: web_conf
   tags:
     - web_conf
 
 - name: Restart apache2 service
+  become: yes
   service:
     name: apache2
     state: restarted
